@@ -67,3 +67,7 @@ instead of using long_float's.
 
 31. New: Bourne shell expansions: ${X||} for absolute value, ${X|} for rounded value, ${X|^} for ceiling value, ${X|,} for floor value.
 
+23. New: provision.sh updates for Red Hat Linux 9.
+
+24. Changes: l10n changed to support Red Hat Linux 9 which disables GNU extensions.
+
